[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "puzzle"
path = "src/main.rs"


[dependencies]
chrono = {version = "0.4"}
clap = {version = "4"}
reqwest = { version = "0.11", features = ["blocking"] }